<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/et_apellidos"
        android:layout_width="357dp"
        android:layout_height="43dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="27dp"
        android:ems="10"
        android:hint="@string/et_apellidos"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_nombres" />

    <EditText
        android:id="@+id/et_telefono"
        android:layout_width="357dp"
        android:layout_height="43dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="27dp"
        android:ems="10"
        android:hint="@string/et_telefono"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/tvw_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="¡Formulario de información!"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_nombres"
        android:layout_width="357dp"
        android:layout_height="43dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="27dp"
        android:ems="10"
        android:hint="@string/et_nombres"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvw_welcome" />

    <TextView
        android:id="@+id/tvw_seleccionarsexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="268dp"
        android:text="Seleccione el sexo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_apellidos" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="354dp"
        android:layout_height="100dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvw_seleccionarsexo">

        <RadioButton
            android:id="@+id/rb_masculino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_masculino" />

        <RadioButton
            android:id="@+id/rb_femenino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_femenino" />
    </RadioGroup>

    <Spinner
        android:id="@+id/sp_departamento"
        android:layout_width="352dp"
        android:layout_height="35dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvw_dep" />

    <Spinner
        android:id="@+id/sp_municipio"
        android:layout_width="352dp"
        android:layout_height="35dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvw_mun" />

    <TextView
        android:id="@+id/tvw_dep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="292dp"
        android:text="Departamento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_telefono" />

    <TextView
        android:id="@+id/tvw_mun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="323dp"
        android:text="Municipio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_departamento" />

    <Button
        android:id="@+id/btn_guardar"
        android:layout_width="164dp"
        android:layout_height="54dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="31dp"
        android:onClick="GuardarInfo"
        android:text="@string/btn_guardar"
        app:layout_constraintEnd_toStartOf="@+id/btn_mostrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_municipio" />

    <Button
        android:id="@+id/btn_mostrar"
        android:layout_width="159dp"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:onClick="MostrarInfo"
        android:text="@string/btn_mostrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_municipio" />

    <TextView
        android:id="@+id/tvw_mostrarInfo"
        android:layout_width="352dp"
        android:layout_height="108dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_guardar" />

</androidx.constraintlayout.widget.ConstraintLayout>